<resources>
    <string name="app_name">CharityApp</string>
    <string name="registration">Создать аккаунт</string>
    <string name="login">Войти</string>
    <string name="logo">Charity</string>
    <string name="slogan">Совершайте пожертвования без обмана</string>
    <string name="status">Статус</string>
    <string name="name_surname">Имя Фамилия</string>'
    <string name="bt_history">История пожертвований</string>
    <string name="data_change">Смена данных</string>
    <string name="podari_zizn">Бюджет: 2 022 853 960 руб. (1-е место по количеству собранных средств в «Русфонд.Навигаторе»).
Оценки: рейтинговое число в рейтинге RAEX – 91.37, оценен «Социальным навигатором» в 4 звезды.</string>
</resources>