<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/login"
            android:layout_width="329dp"
            android:layout_height="64dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="41dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/bt_history"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/login2"
            android:layout_width="329dp"
            android:layout_height="58dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="41dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/data_change"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="252dp"
            android:layout_height="216dp"
            android:layout_marginStart="71dp"
            android:layout_marginTop="197dp"
            android:layout_marginEnd="70dp"
            android:src="@drawable/profile_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="177dp"
            android:layout_marginTop="136dp"
            android:layout_marginEnd="177dp"
            android:text="@string/status"
            android:textColor="@color/button_color"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="66dp"
            android:text="@string/name_surname"
            android:textColor="@color/button_color"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>